# stamina-storm

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  InfCTMCModelGenerator.h  LICENSE  README.md  SECURITY.md  STYLEGUIDE.md  StaminaCL.h  StaminaCPackConfig.cmake  StaminaModelChecker.cpp  StaminaModelChecker.h  StaminaVersion.cmake  build.sh  main.cpp  options.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml
doc/: Doxyfile  GETTING_STARTED.md  GUIInstall.md  STYLEGUIDE.md
doc/algorithms/: multithreading.md
doc/code/: Core.md  ModelBuilders.md  README.md  Utilities.md
gui/: xstamina.py
src/: ExplicitTruncatedModelBuilder.cpp  InfCTMCModelGenerator.cpp  InfCTMCModelGenerator.h  InfCTMCNextStateGenerator.cpp  InfCTMCNextStateGenerator.h  Options.cpp  Options.h  ProbState.cpp  ProbState.h  Stamina.cpp  Stamina.h  StaminaArgParse.h  StaminaCL.cpp  StaminaCL.h  StaminaExplicitModelBuilder.cpp  StaminaExplicitModelBuilder.h  StaminaMessages.cpp  StaminaMessages.h  StaminaModelBuilder.cpp  StaminaModelBuilder.h  StaminaModelChecker.cpp  StaminaModelChecker.h  StaminaNextStateGenerator.cpp  StaminaNextStateGenerator.h  StaminaOptions.cpp  StaminaOptions.h  StateSpaceInformation.cpp  StateSpaceInformation.h  main.cpp  options.cpp
src/gui/: MoreOptions.py  README.md  xstamina.py
src/gui-depricated/: MoreOptions.py  xstamina.py
src/stamina/: ANSIColors.h  ExplicitTruncatedModelBuilder.h  Options.cpp  Options.h  Stamina.cpp  Stamina.h  StaminaArgParse.h  StaminaMessages.cpp  StaminaMessages.h  StaminaModelBuilder.cpp  StaminaModelBuilder.h  StaminaModelChecker.cpp  StaminaModelChecker.h  StateSpaceInformation.cpp  __storm_needed_for_checker.h  gui.cpp  main.cpp
src/stamina/builder/: ExplicitTruncatedModelBuilder.cpp  ExplicitTruncatedModelBuilder.h  ModelBuilderMutex.cpp  ModelBuilderMutex.h  ProbabilityState.h  StaminaIterativeModelBuilder.cpp  StaminaIterativeModelBuilder.h  StaminaModelBuilder.cpp  StaminaModelBuilder.h  StaminaPriorityModelBuilder.cpp  StaminaPriorityModelBuilder.h  StaminaReExploringModelBuilder.cpp  StaminaReExploringModelBuilder.h  StaminaThreadedIterativeModelBuilder.cpp  StaminaThreadedIterativeModelBuilder.h  StaminaThreadedPriorityModelBuilder.cpp  StaminaThreadedPriorityModelBuilder.h  StateAndTransitions.h  __storm_needed_for_builder.h
src/stamina/builder/threads/: BaseThread.cpp  BaseThread.h  BookKeeperThread.cpp  BookKeeperThread.h  ControlThread.cpp  ControlThread.h  ExplorationThread.cpp  ExplorationThread.h  IterativeExplorationThread.cpp  IterativeExplorationThread.h  ThreadBase.cpp  ThreadBase.h
src/stamina/core/: Options.cpp  Options.h  StaminaMessages.cpp  StaminaMessages.h  StaminaModelChecker.cpp  StaminaModelChecker.h  StateSpaceInformation.cpp  StateSpaceInformation.h  __storm_needed_for_checker.h
src/stamina/gui/: About.cpp  About.h  CMakeLists.txt  CompileUiFiles.sh  FindReplace.cpp  FindReplace.h  GuiWorkerThread.h  MainWindow.cpp  MainWindow.h  Makefile  MessageBridge.cpp  MessageBridge.h  Preferences.cpp  Preferences.h  PropertyWizard.cpp  PropertyWizard.h  README.md  icons.qrc  main.cpp  resources.qrc
src/stamina/gui/addons/: CodeEditor.cpp  CodeEditor.h  Lexer.cpp  Lexer.h  LineNumberArea.cpp  LineNumberArea.h
src/stamina/gui/addons/highlighter/: ColorSchemes.h  Highlighter.cpp  Highlighter.h  PrismHighlighter.cpp  PrismHighlighter.h
src/stamina/gui/resources/: org.staminachecker.stamina.desktop  resources.qrc  wordlist.txt
src/stamina/gui/settings/: Settings.cpp  Settings.h
src/stamina/gui/ui/: About.ui  FindReplace.ui  MainWindow.ui  Preferences.ui  PropertyWizard.ui
src/stamina/priority/: EventStatePriority.cpp  EventStatePriority.h  StatePriority.cpp  StatePriority.h  notes.txt
src/stamina/rare/: Crn.cpp  Crn.h  DependencyGraph.cpp  DependencyGraph.h  Exception.h  Subspace.cpp  Subspace.h
src/stamina/threads/: ThreadBase.cpp  ThreadBase.h
src/stamina/threadsafe/generator/: ThreadsafePrismNextStateGenerator.cpp  ThreadsafePrismNextStateGenerator.h
src/stamina/util/: ModelModify.cpp  ModelModify.h  StaminaSparseMatrixBuilder.cpp  StaminaSparseMatrixBuilder.h  StateIndexArray.cpp  StateIndexArray.h  StateMemoryPool.cpp  StateMemoryPool.h
test/: README.md  simple.csl  simple.prism  tests.py
test/bug-reproduction/: CMakeLists.txt  test.cpp
test/hashMapTest/: CMakeLists.txt  README.md  hashMap.cpp  hashMap.java  hashMap.py  stateIndexArrayTest.cpp  tests.py
test/mapTest/: tests.py
test/models/: simple.csl  simple.prism
test/scripts/: pMinMaxTest.sh
test/scripts/tra-file-analysis/: compare.py
test/tra-file-analysis/: findDuplicateTransitions.py
test/unit/: CMakeLists.txt  helper.h  unit.cpp
